More bug squashing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,18 +238,7 @@ footer {
   margin: 20px;
 }
 
-/*.contact-form {
-  margin-top: 45px;
-  width: 914px;
-  padding: 20px;
-  border: #dddddd solid;
-  background-color: #ffffff;
-  float: left;
-  margin-left: auto;
-  margin-right: auto;
-} */
-
-h4 {
+h5 {
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 24px;
   color: #777777;
